tests/positive/pr118c_binary_conversion_wrap.safe
package pr118c_binary_conversion_wrap

   wrapped : binary (8) = binary (8) (300)

