tests/negative/neg_pr118c1_print_expression.safe
package neg_pr118c1_print_expression

   value : integer = print (1);
